# advent-of-code

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  pyproject.toml  tsconfig.json
2019/1/: README.md
2019/1/python/: main.py
2019/2/: README.md
2019/2/python/: main.py
2019/3/: README.md
2019/3/python/: main.py
2020/: README.md
2020/solutions/11/: README.md
2021/01/: README.md  main.py
2021/02/: README.md
2021/03/: README.md
2021/04/: README.md
2021/05/: README.md
2021/06/: README.md
2021/07/: README.md
2021/08/: README.md
2021/09/: README.md
2021/10/: README.md
2021/11/: README.md
2021/12/: README.md
2021/13/: README.md
2021/14/: README.md
2021/15/: README.md
2022/01/: README.md
2022/02/: README.md
2022/03/: README.md
2022/04/: README.md
2022/05/: README.md
2022/06/: README.md
2022/07/: README.md
2022/08/: README.md
2022/09/: README.md
2022/10/: README.md
2022/11/: README.md
2022/12/: README.md
2022/13/: README.md
2022/14/: README.md
2022/15/: README.md
2023/01/: README.md
2023/02/: README.md
2023/03/: README.md
2023/04/: README.md
2024/01/: main.py
2024/02/: findings.md  main.py
2024/03/: findings.md  main.py
2024/04/: findings.md  main.py
2024/05/: findings.md  main.py
2024/06/: main.py
learning/: Go.md
solutions/1/: README.md  main.py
solutions/10/: README.md
solutions/12/: README.md
solutions/2/: README.md  main.py
solutions/3/: main.py
solutions/4/: main.py
solutions/5/: README.md
solutions/6/: README.md
solutions/9/: README.md
(+68 files in other folders)
