[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["cupcakearmy <hi@nicco.io>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
line-profiler = "^4.0.2"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
